--- a/pathfind/src/styles/global.css
+++ b/pathfind/src/styles/global.css
@@ -3,26 +3,34 @@ table {
 }
 
 td {
-    border: 1px solid black;
-    width: 1rem;
-    height: 1rem;
+    border: 1px solid #AAAAAA;
+    width: 1.5rem;
+    height: 1.5rem;
 }
-
-.wall-cell{
-    transition: background-color 1s;
+.grid-container {
+    display: flex;
+    justify-content: center;
+    /* background-color: red; */
+}
+.wall-cell {
     background-color: #343A40;
 }
 
-.animation {
-    transition: background-color 1s;
+
+.animate-cell {
+    background-color: rgba(52, 58, 64, 0.8);
+    transform: scale(0.9);
+    transform-origin: center;
 }
 
+
 .path-cell {
+
     background-color: #007BFF;
 }
 
 .searched-cell {
-    background-color: #FFC107;
+    background-color: #FFE8A5;
 }
 
 .start-cell {
