Added clear path and clear board buttons

--- a/pathfind/src/styles/global.css
+++ b/pathfind/src/styles/global.css
@@ -7,20 +7,29 @@ td {
     width: 1.5rem;
     height: 1.5rem;
 }
+
+.header {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .grid-container {
     display: flex;
     justify-content: center;
-    /* background-color: red; */
 }
+
 .wall-cell {
     background-color: #343A40;
 }
 
-
-.animate-cell {
+.animate-wall-cell {
     background-color: rgba(52, 58, 64, 0.8);
     transform: scale(0.9);
     transform-origin: center;
+}
+
+.animate-path-cell {
+    background: linear-gradient(#FFE8A5, #007BFF);
 }
 
 
