--- a/pathfind/src/styles/global.css
+++ b/pathfind/src/styles/global.css
@@ -1,26 +1,78 @@
-table {
-    border-collapse: collapse;
+.config-hub {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #CCCCFF;
+}
+
+.config-hub-elements {
+    background-color: #CCCCFF;
+    color: black;
+    overflow-x: auto;
+    font-weight: 800;
+}
+
+.config-hub-elements:hover {
+    background-color: #D8B4FF;
+}
+
+.visualizer-button-container {
+    display: flex;
+    justify-content: center;
+}
+
+.visualizer-button-container button {
+    background-color: #E69A8DFF;
+    color: black;
+    font-weight: 800;
+}
+
+.visualizer-button-container button:hover {
+    background-color: rgba(230, 154, 141, 0.8);
 }
 
 td {
     border: 1px solid #AAAAAA;
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 4px;
 }
 
-.header {
-    display: flex;
-    justify-content: space-evenly;
+.grid-cell:hover {
+    background-color: #FFC0CB;
 }
 
 .grid-container {
     display: flex;
     justify-content: center;
+    align-content: center;
+    padding: 10px
 }
 
 .wall-cell {
     background-color: #343A40;
 }
+
+.sand-cell {
+    background-color: #F4A460;
+    border: 1px solid #D2B48C;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3)
+}
+
+.mud-cell {
+    background-color: #8B4513;
+    border: 1px solid #654321;
+    box-shadow: inset 0 0 10px 5px #654321;
+}
+
+.water-cell {
+    background-color: rgba(0, 191, 255, 0.5);
+    box-shadow: 0 0 10px rgba(0, 191, 255, 0.5);
+    border: 1px solid #00BFFF;
+
+}
+
+
+
 
 .animate-wall-cell {
     background-color: rgba(52, 58, 64, 0.8);
@@ -29,19 +81,43 @@ td {
 }
 
 .animate-path-cell {
-    background: linear-gradient(#FFE8A5, #007BFF);
+    background: linear-gradient(#00203FFF, #ADEFD1FF);
 }
 
-
 .path-cell {
-
-    background-color: #007BFF;
+    background-color: #FFD700;
 }
 
 .searched-cell {
-    background-color: #FFE8A5;
+    background-color: #00203FFF;
 }
 
 .start-cell {
     background-color: aqua;
+}
+
+
+@media screen and (max-width: 390px) {
+
+
+    .config-hub-elements,
+    .visualizer-button {
+        font-size: 10px;
+        font-weight: 800;
+    }
+
+    .config-hub {
+        display: flex;
+        justify-content: space-evenly;
+        height: 5rem;
+        flex-wrap: wrap; 
+
+    }
+
+    td {
+        width: 0.5rem;
+        height: 0.5rem;
+        border-radius: 0px;
+    }
+
 }
