Added different grid types and styled the weights

--- a/pathfind/src/styles/global.css
+++ b/pathfind/src/styles/global.css
@@ -1,6 +1,7 @@
 .config-hub {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     background-color: #CCCCFF;
 }
 
@@ -32,13 +33,8 @@
 
 td {
     border: 1px solid #AAAAAA;
-    width: 2rem;
-    height: 2rem;
-    border-radius: 4px;
-}
-
-.grid-cell:hover {
-    background-color: #FFC0CB;
+    width: 2.3rem;
+    height: 2.3rem;
 }
 
 .grid-container {
@@ -48,56 +44,112 @@ td {
     padding: 10px
 }
 
+.grid-container table {
+    border-collapse: collapse;
+}
+
 .wall-cell {
+    
     background-color: #343A40;
 }
 
 .sand-cell {
-    background-color: #F4A460;
-    border: 1px solid #D2B48C;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3)
+    background-color: #D2B48C;
+    color: transparent;
+    --hover-color: white;
 }
 
-.mud-cell {
-    background-color: #8B4513;
-    border: 1px solid #654321;
-    box-shadow: inset 0 0 10px 5px #654321;
-}
 
 .water-cell {
-    background-color: rgba(0, 191, 255, 0.5);
-    box-shadow: 0 0 10px rgba(0, 191, 255, 0.5);
-    border: 1px solid #00BFFF;
+    background-color: #000080;
+    color: transparent;
+    --hover-color: white;
+}
+
+.forest-cell {
+    background-color: #006400;
+    font-size: 800;
+    color: transparent;
+    --hover-color: white;
 
 }
 
+.sand-cell:hover,
+.forest-cell:hover,
+.water-cell:hover {
+    font-weight: bold;
+    text-align: center;
+    color: var(--hover-color);
+}
 
-
-
-.animate-wall-cell {
+.animate-weight-cell {
+    color: transparent;
     background-color: rgba(52, 58, 64, 0.8);
     transform: scale(0.9);
     transform-origin: center;
 }
 
 .animate-path-cell {
-    background: linear-gradient(#00203FFF, #ADEFD1FF);
+    background: linear-gradient(#E6E6FA, #E6A8A8);
 }
 
 .path-cell {
-    background-color: #FFD700;
+    background-color: #E6A8A8;
 }
 
 .searched-cell {
-    background-color: #00203FFF;
+    background-color: #E6E6FA;
 }
 
-.start-cell {
-    background-color: aqua;
+.searched-cell, .path-cell{
+    font-weight: bold;
+    text-align: center;
+    color: black;
+}
+
+.waypoints {
+    background-color: gold;
 }
 
 
-@media screen and (max-width: 390px) {
+
+@media screen and (max-width: 1100px) {
+    td {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
+
+}
+
+
+
+@media screen and (max-width: 830px) {
+    td {
+        width: 1.3rem;
+        height: 1.3rem;
+    }
+
+}
+
+@media screen and (max-width: 670px) {
+
+
+    .config-hub-elements,
+    .visualizer-button {
+        font-size: 15px;
+        font-weight: 800;
+    }
+
+    td {
+        width: 1rem;
+        height: 1rem;
+        border-radius: 0px;
+    }
+
+}
+
+
+@media screen and (max-width: 440px) {
 
 
     .config-hub-elements,
@@ -107,17 +159,14 @@ td {
     }
 
     .config-hub {
-        display: flex;
-        justify-content: space-evenly;
         height: 5rem;
-        flex-wrap: wrap; 
-
     }
 
-    td {
+    td{
         width: 0.5rem;
         height: 0.5rem;
         border-radius: 0px;
+        font-size: 5px;
     }
 
 }
