--- a/pathfind/src/styles/global.css
+++ b/pathfind/src/styles/global.css
@@ -1,6 +1,7 @@
 .config-hub {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     flex-wrap: wrap;
     background-color: #CCCCFF;
 }
@@ -33,8 +34,12 @@
 
 td {
     border: 1px solid #AAAAAA;
-    width: 2.3rem;
-    height: 2.3rem;
+    width: 2.0rem;
+    height: 2.0rem;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .grid-container {
@@ -77,7 +82,8 @@ td {
 .sand-cell:hover,
 .forest-cell:hover,
 .water-cell:hover {
-    font-weight: bold;
+    font-size: 15px;
+    /* font-weight: bold; */
     text-align: center;
     color: var(--hover-color);
 }
@@ -108,7 +114,18 @@ td {
 }
 
 .waypoints {
+    color: transparent;
     background-color: gold;
+}
+
+@media screen and (max-width: 1400px) {
+    td {
+        width: 1.6rem;
+        height: 1.6rem;
+        font-size: 15px;
+
+    }
+
 }
 
 
@@ -117,8 +134,23 @@ td {
     td {
         width: 1.5rem;
         height: 1.5rem;
+        font-size: 10px;
+
     }
 
+}
+
+.settings {
+    display: flex;
+    flex-wrap: wrap;
+}
+.heuristic-picker, .movement-picker, .speed-picker {
+    padding: 5px;
+}
+
+
+.mantine-radio  {
+    padding-bottom: 2px;
 }
 
 
@@ -127,6 +159,8 @@ td {
     td {
         width: 1.3rem;
         height: 1.3rem;
+        font-size: 10px;
+
     }
 
 }
@@ -144,6 +178,8 @@ td {
         width: 1rem;
         height: 1rem;
         border-radius: 0px;
+        font-size: 5px;
+
     }
 
 }
