--- a/pathfind/src/styles/global.css
+++ b/pathfind/src/styles/global.css
@@ -1,3 +1,12 @@
+header {
+    font-family: 'Montserrat';
+}
+
+table {
+    z-index: 1;
+    background-color: white;
+}
+
 .config-hub {
     display: flex;
     justify-content: space-evenly;
@@ -33,9 +42,10 @@
 }
 
 td {
-    border: 1px solid #AAAAAA;
+    border: 1px solid black;
     width: 2.0rem;
     height: 2.0rem;
+    font-size: 10px;
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
@@ -44,6 +54,7 @@ td {
 
 .grid-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
     padding: 10px
@@ -54,7 +65,7 @@ td {
 }
 
 .wall-cell {
-    
+
     background-color: #343A40;
 }
 
@@ -73,7 +84,6 @@ td {
 
 .forest-cell {
     background-color: #006400;
-    font-size: 800;
     color: transparent;
     --hover-color: white;
 
@@ -82,18 +92,19 @@ td {
 .sand-cell:hover,
 .forest-cell:hover,
 .water-cell:hover {
-    font-size: 15px;
-    /* font-weight: bold; */
+    font-size: 10px;
     text-align: center;
     color: var(--hover-color);
 }
 
+
 .animate-weight-cell {
     color: transparent;
-    background-color: rgba(52, 58, 64, 0.8);
-    transform: scale(0.9);
-    transform-origin: center;
+    background-color: #343A40;
+    transform: scale(1.2);
 }
+
+
 
 .animate-path-cell {
     background: linear-gradient(#E6E6FA, #E6A8A8);
@@ -107,7 +118,8 @@ td {
     background-color: #E6E6FA;
 }
 
-.searched-cell, .path-cell{
+.searched-cell,
+.path-cell {
     font-weight: bold;
     text-align: center;
     color: black;
@@ -118,49 +130,67 @@ td {
     background-color: gold;
 }
 
-@media screen and (max-width: 1400px) {
-    td {
-        width: 1.6rem;
-        height: 1.6rem;
-        font-size: 15px;
-
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
     }
 
-}
-
-
-
-@media screen and (max-width: 1100px) {
-    td {
-        width: 1.5rem;
-        height: 1.5rem;
-        font-size: 10px;
-
+    100% {
+        transform: rotate(360deg);
     }
-
 }
 
 .settings {
     display: flex;
     flex-wrap: wrap;
 }
-.heuristic-picker, .movement-picker, .speed-picker {
+
+.heuristic-picker,
+.movement-picker,
+.speed-picker {
     padding: 5px;
 }
-
-
-.mantine-radio  {
-    padding-bottom: 2px;
+.heuristic-button, .speed-button{
+    padding: 2px;
 }
 
+.settings-icon {
+    animation: rotate 2s linear infinite;
+}
+
+.algorithm-stats{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    font-family: 'Inconsolata';
+    font-weight: 300;
+    height: 4rem;
+    padding-left: 4px;
+}
+
+
+
+@media screen and (max-width: 1500px) {
+    td {
+        width: 1.6rem;
+        height: 1.6rem;
+    }
+
+}
+
+@media screen and (max-width: 1100px) {
+    td {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
+
+}
 
 
 @media screen and (max-width: 830px) {
     td {
         width: 1.3rem;
         height: 1.3rem;
-        font-size: 10px;
-
     }
 
 }
@@ -177,7 +207,6 @@ td {
     td {
         width: 1rem;
         height: 1rem;
-        border-radius: 0px;
         font-size: 5px;
 
     }
@@ -198,9 +227,9 @@ td {
         height: 5rem;
     }
 
-    td{
-        width: 0.5rem;
-        height: 0.5rem;
+    td {
+        width: 0.9rem;
+        height: 0.9rem;
         border-radius: 0px;
         font-size: 5px;
     }
