--- a/pathfind/src/styles/global.css
+++ b/pathfind/src/styles/global.css
@@ -2,6 +2,10 @@ header {
     font-family: 'Montserrat';
 }
 
+body {
+    min-width: 320px;
+}
+
 td {
     border: 1px solid black;
     width: 2.0rem;
@@ -18,6 +22,7 @@ td {
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+    width: 100vw;
     background-color: #CCCCFF;
 }
 
@@ -101,10 +106,10 @@ td {
 .animate-weight-cell {
     color: transparent;
     background-color: #343A40;
-    transform: scale(1.2);
-    animation-duration: 1.5s;
+    /* transform: scale(1.2);
+    animation-duration: 0.5s;
     animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
+    animation-iteration-count: infinite; */
 }
 
 
@@ -155,10 +160,18 @@ td {
 
 .grid-clipboard {
     display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    height: 5rem;
+    justify-content: space-around;
     align-items: center;
+    flex-direction: row;
+    align-items: center;
+
+}
+
+.error-message {
+    font-family: "Montserrat";
+    font-weight: bold;
+    font-size: 1.25em;
+    color: #E83C3C;
 }
 
 .clipboard-button {
@@ -227,14 +240,17 @@ td {
 
     .config-hub-elements,
     .visualizer-button {
-        font-size: 15px;
-        font-weight: 800;
+        font-size: 0.9375em;
+    }
+
+    .error-message {
+        font-size: 0.7em;
     }
 
     td {
         width: 1rem;
         height: 1rem;
-        font-size: 5px;
+        font-size: 0.3125em;
 
     }
 
@@ -246,8 +262,11 @@ td {
 
     .config-hub-elements,
     .visualizer-button {
-        font-size: 10px;
-        font-weight: 800;
+        font-size: 0.625em;
+    }
+
+    .error-message {
+        font-size: 0.625em;
     }
 
     .config-hub {
@@ -257,7 +276,32 @@ td {
     td {
         width: 0.9rem;
         height: 0.9rem;
-        font-size: 5px;
+        font-size: 0.3125em;
+    }
+
+}
+
+@media screen and (max-width: 320px) {
+
+
+    .config-hub-elements,
+    .visualizer-button {
+        font-size: 0.3em;
+    }
+
+    .error-message {
+        font-size: 0.3em;
+    }
+
+    .config-hub {
+        width: 100vw;
+        height: 10rem
+    }
+
+    td {
+        width: 0.1rem;
+        height: 0.1rem;
+        font-size: 0.1em;
     }
 
 }
