--- a/pathfind/src/styles/global.css
+++ b/pathfind/src/styles/global.css
@@ -1,283 +1,306 @@
 header {
-  font-family: "Montserrat";
+    font-family: 'Montserrat';
 }
 
 body {
-  min-width: 320px;
+    min-width: 320px;
 }
 
 td {
-  border: 1px solid black;
-  width: 2rem;
-  height: 2rem;
-  font-size: 10px;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
+    border: 1px solid black;
+    width: 2.0rem;
+    height: 2.0rem;
+    font-size: 10px;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .config-hub {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 100vw;
-  background-color: #ccccff;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100vw;
+    background-color: #CCCCFF;
 }
 
 .config-hub-elements {
-  background-color: #ccccff;
-  color: black;
-  overflow-x: auto;
-  font-weight: bold;
-  --hover-color: #d8b4ff;
+    background-color: #CCCCFF;
+    color: black;
+    overflow-x: auto;
+    font-weight: bold;
+    --hover-color: #D8B4FF;
 }
 
 .config-hub-elements:hover {
-  background-color: #d8b4ff;
+    background-color: #D8B4FF;
 }
 
 .visualizer-button-container {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
+
 }
 
 .visualizer-button-container button {
-  background-color: #e69a8dff;
-  color: black;
-  font-weight: 800;
-  --hover-color: rgba(230, 154, 141, 0.8);
+    background-color: #E69A8DFF;
+    color: black;
+    font-weight: 800;
+    --hover-color: rgba(230, 154, 141, 0.8);
 }
 
 .visualizer-button-container button:hover,
 .config-hub-elements:hover,
 .clipboard-button:hover {
-  font-weight: bold;
-  background-color: var(--hover-color);
+    font-weight: bold;
+    background-color: var(--hover-color);
+
 }
 
 .grid-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    padding: 10px
 }
 
 .grid-container table {
-  border-collapse: collapse;
+    border-collapse: collapse;
 }
 
 .wall-cell {
-  background-color: #343a40;
+    background-color: #343A40;
 }
 
 .sand-cell {
-  background-color: #d2b48c;
-  color: transparent;
-  --hover-color: white;
+    background-color: #D2B48C;
+    color: transparent;
+    --hover-color: white;
 }
 
+
 .water-cell {
-  background-color: #000080;
-  color: transparent;
-  --hover-color: white;
+    background-color: #000080;
+    color: transparent;
+    --hover-color: white;
 }
 
 .forest-cell {
-  background-color: #006400;
-  color: transparent;
-  --hover-color: white;
+    background-color: #006400;
+    color: transparent;
+    --hover-color: white;
+
 }
 
 .sand-cell:hover,
 .forest-cell:hover,
 .water-cell:hover {
-  font-size: 10px;
-  text-align: center;
-  color: var(--hover-color);
+    font-size: 10px;
+    text-align: center;
+    color: var(--hover-color);
 }
 
 .animate-weight-cell {
-  color: transparent;
-  background-color: #343a40;
-  transform: scale(1.2);
-  animation-duration: 0.5s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
+    color: transparent;
+    background-color: #343A40;
+    transform: scale(1.2);
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
 }
 
+
 .animate-path-cell {
-  background: linear-gradient(#e6e6fa, #e6a8a8);
+    background: linear-gradient(#E6E6FA, #E6A8A8);
 }
 
 .path-cell {
-  background-color: #e6a8a8;
+    background-color: #E6A8A8;
 }
 
 .searched-cell {
-  background-color: #e6e6fa;
+    background-color: #E6E6FA;
 }
 
 .searched-cell,
 .path-cell {
-  font-weight: bold;
-  text-align: center;
-  color: black;
+    font-weight: bold;
+    text-align: center;
+    color: black;
 }
 
 .waypoints {
-  color: transparent;
-  background-color: gold;
+    color: transparent;
+    background-color: gold;
 }
 
 .settings {
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .heuristic-grid,
 .movement-grid,
 .speed-grid,
 .heuristic-weight-grid {
-  padding: 5px;
+    padding: 5px;
 }
 
 .heuristic-button,
 .speed-button,
 .weight-slider {
-  display: flex;
-  flex-direction: row;
-  padding: 2px;
+    display: flex;
+    flex-direction: row;
+    padding: 2px;
 }
 
 .grid-clipboard {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: row;
-  align-items: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    align-items: center;
+
 }
 
 .error-message {
-  font-family: "Montserrat";
-  font-weight: bold;
-  font-size: 1.25em;
-  color: #e83c3c;
+    font-family: "Montserrat";
+    font-weight: bold;
+    font-size: 1.25em;
+    color: #E83C3C;
 }
 
 .clipboard-button {
-  height: 2rem;
-  width: 8rem;
-  border-radius: 2px;
-  font-size: small;
-  color: black;
-  background-color: peachpuff;
-  --hover-color: rgba(255, 218, 185, 0.8);
+    height: 2rem;
+    width: 8rem;
+    border-radius: 2px;
+    font-size: small;
+    color: black;
+    background-color: peachpuff;
+    --hover-color: rgba(255, 218, 185, 0.8);
 }
 
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
 
-  100% {
-    transform: rotate(360deg);
-  }
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .settings-icon {
-  animation: rotate 2s linear infinite;
+    animation: rotate 2s linear infinite;
 }
 
 .algorithm-stats {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  font-family: "Inconsolata";
-  font-weight: 300;
-  height: 5rem;
-  padding-left: 4px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    font-family: 'Inconsolata';
+    font-weight: 300;
+    height: 5rem;
+    padding-left: 4px;
 }
 
+
 @media screen and (max-width: 1500px) {
-  td {
-    width: 1.6rem;
-    height: 1.6rem;
-  }
+    td {
+        width: 1.6rem;
+        height: 1.6rem;
+    }
+
 }
 
 @media screen and (max-width: 1100px) {
-  td {
-    width: 1.5rem;
-    height: 1.5rem;
-  }
+    td {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
+
 }
 
+
 @media screen and (max-width: 830px) {
-  td {
-    width: 1.3rem;
-    height: 1.3rem;
-  }
+    td {
+        width: 1.3rem;
+        height: 1.3rem;
+    }
+
 }
 
 @media screen and (max-width: 670px) {
-  .config-hub-elements,
-  .visualizer-button {
-    font-size: 0.9375em;
-  }
 
-  .error-message {
-    font-size: 0.7em;
-  }
 
-  td {
-    width: 1rem;
-    height: 1rem;
-    font-size: 0.3125em;
-  }
+    .config-hub-elements,
+    .visualizer-button {
+        font-size: 0.9375em;
+    }
+
+    .error-message {
+        font-size: 0.7em;
+    }
+
+    td {
+        width: 1rem;
+        height: 1rem;
+        font-size: 0.3125em;
+
+    }
+
 }
 
+
 @media screen and (max-width: 440px) {
-  .config-hub-elements,
-  .visualizer-button {
-    font-size: 0.625em;
-  }
 
-  .error-message {
-    font-size: 0.625em;
-  }
 
-  .config-hub {
-    height: 8rem;
-  }
+    .config-hub-elements,
+    .visualizer-button {
+        font-size: 0.625em;
+    }
 
-  td {
-    width: 0.9rem;
-    height: 0.9rem;
-    font-size: 0.3125em;
-  }
+    .error-message {
+        font-size: 0.625em;
+    }
+
+    .config-hub {
+        height: 8rem
+    }
+
+    td {
+        width: 0.9rem;
+        height: 0.9rem;
+        font-size: 0.3125em;
+    }
+
 }
 
 @media screen and (max-width: 320px) {
-  .config-hub-elements,
-  .visualizer-button {
-    font-size: 0.3em;
-  }
 
-  .error-message {
-    font-size: 0.3em;
-  }
 
-  .config-hub {
-    width: 100vw;
-    height: 10rem;
-  }
+    .config-hub-elements,
+    .visualizer-button {
+        font-size: 0.3em;
+    }
 
-  td {
-    width: 0.1rem;
-    height: 0.1rem;
-    font-size: 0.1em;
-  }
+    .error-message {
+        font-size: 0.3em;
+    }
+
+    .config-hub {
+        width: 100vw;
+        height: 10rem
+    }
+
+    td {
+        width: 0.1rem;
+        height: 0.1rem;
+        font-size: 0.1em;
+    }
+
 }
